--- a/package.json
+++ b/package.json
@@ -154,6 +154,7 @@
     "mongoose-url-slugs": "1.0.2",
     "morgan": "1.10.0",
     "multer": "1.4.2",
+    "natural": "2.4.0",
     "ng-file-upload": "12.2.13",
     "nodemailer": "6.4.17",
     "nunjucks": "3.2.2",
@@ -162,6 +163,7 @@
     "passport-github": "1.1.0",
     "passport-local": "1.0.0",
     "passport-twitter": "1.0.4",
+    "pluralize": "8.0.0",
     "prop-types": "15.7.2",
     "prunecluster": "2.1.0",
     "randomcolor": "0.6.2",
@@ -176,10 +178,13 @@
     "serve-favicon": "2.5.0",
     "speakingurl": "14.0.1",
     "stathat": "0.0.8",
+    "stopword": "1.0.6",
     "styled-components": "5.2.1",
     "ui-leaflet": "2.0.0",
     "uuid": "8.3.2",
     "validator": "13.5.2",
+    "wink-statistics": "2.1.1",
+    "wink-tokenizer": "5.2.3",
     "winston": "2.4.5",
     "winston-papertrail": "1.0.5"
   },
